--- a/app/views/rnamings/show.html.erb
+++ b/app/views/rnamings/show.html.erb
@@ -2,5 +2,8 @@
 
 <%= render @rnaming.categories %>
 
+<p style = "visibility:hidden;">gh</p>
+<p style = "visibility:hidden;">gh</p>
+
 <%= link_to 'Edit', edit_rnaming_path(@rnaming) %> |
 <%= link_to 'Back', rnamings_path %>
