--- a/app/views/rnamings/show.html.erb
+++ b/app/views/rnamings/show.html.erb
@@ -5,5 +5,5 @@
 <p style = "visibility:hidden;">gh</p>
 <p style = "visibility:hidden;">gh</p>
 
-<%= link_to 'Edit', edit_rnaming_path(@rnaming) %> |
+<%= link_to 'Add', new_rnaming_category_path(@rnaming) %> |
 <%= link_to 'Back', rnamings_path %>
