server is fucked, switching to my laptop

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -4,7 +4,7 @@
 
 <div class="field">
 
-  <%= form_for @category do |f| %>
+  <%= form_with (model:rnaming.categories) do |f| %>
     <%= f.label "What instance" %>
     <%= form.text_field :instance, placeholder: "type here"%>
     <p style = "visibility:hidden;">jhjh</p>
