--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -6,30 +6,30 @@
 
 <div class="field">
 
-  <%= form_for @category do |f| %>
+  <%= form_with(model: @category, url: [@rname, @category], local: true) do |f| %>
     <%= f.label "What instance" %>
-    <%= form.text_field :instance, placeholder: "type here"%>
+    <%= f.text_field :instance, placeholder: "type here"%>
     <p style = "visibility:hidden;">jhjh</p>
 
-    <%= f.label "What instance" %>
-    <%= form.text_field :case, placeholder: "type here"%>
+    <%= f.label "What case" %>
+    <%= f.text_field :case, placeholder: "type here"%>
     <p style = "visibility:hidden;">jhjh</p>
 
-    <%= f.label "What instance" %>
-    <%= form.text_field :character, placeholder: "type here"%>
+    <%= f.label "What character" %>
+    <%= f.text_field :character, placeholder: "type here"%>
     <p style = "visibility:hidden;">jhjh</p>
 
-    <%= f.label "What instance" %>
-    <%= form.text_field :plurality, placeholder: "type here"%>
+    <%= f.label "What plurality" %>
+    <%= f.text_field :plurality, placeholder: "type here"%>
     <p style = "visibility:hidden;">jhjh</p>
     <p style = "visibility:hidden;">jhjh</p>
 </div>
 
 
   <div class="actions">
-    <%= form.submit %>
+    <%= f.submit %>
   </div>
 <% end %>
 
 
-<%= link_to 'Back', rnaming_path %>
+<%= link_to 'Back', rnaming_path(params[:rnaming_id]) %>
