Fuck it, moving on to the next database

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -22,6 +22,11 @@
     <%= f.label "What plurality" %>
     <%= f.text_field :plurality, placeholder: "type here"%>
     <p style = "visibility:hidden;">jhjh</p>
+
+    <%= f.label "Type your Side Note out" %>
+    <%= f.text_area :side_note, placeholder: "type here"%>
+
+
     <p style = "visibility:hidden;">jhjh</p>
 </div>
 
