--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -13,3 +13,9 @@
 
 <p>This is the <strong>Plurality</strong></p>
 <%= @category.plurality %>
+
+<p style = "visibility:hidden">bhbhb</p>
+
+
+<p style = "font-size: 20px;"> <strong>Note</strong> </p>
+<%= @category.side_note %>
