--- a/app/views/rnamings/index.html.erb
+++ b/app/views/rnamings/index.html.erb
@@ -1,3 +1,5 @@
+<head>
+
 <script type="text/javascript">
   (function(p,u,s,h){
       p._pcq=p._pcq||[];
@@ -11,6 +13,10 @@
   })(window,document);
 </script>
 
+</head>
+
+
+<body>
 
 <p id="notice"><%= notice %></p>
 
@@ -38,3 +44,5 @@
 <br>
 
 <%= link_to 'New Rnaming', new_rnaming_path %>
+
+</body>
