--- a/app/views/rnamings/index.html.erb
+++ b/app/views/rnamings/index.html.erb
@@ -1,19 +1,6 @@
-<head>
+<!DOCTYPE html>
 
-<script type="text/javascript">
-  (function(p,u,s,h){
-      p._pcq=p._pcq||[];
-      p._pcq.push(['_currentTime',Date.now()]);
-      s=u.createElement('script');
-      s.type='text/javascript';
-      s.async=true;
-      s.src='https://cdn.pushcrew.com/js/440ea5876356ba13a147ef807f4446ed.js';
-      h=u.getElementsByTagName('script')[0];
-      h.parentNode.insertBefore(s,h);
-  })(window,document);
-</script>
-
-</head>
+<html>
 
 
 <body>
@@ -46,3 +33,6 @@
 <%= link_to 'New Rnaming', new_rnaming_path %>
 
 </body>
+
+
+</html>
