--- a/app/views/rnamings/index.html.erb
+++ b/app/views/rnamings/index.html.erb
@@ -2,6 +2,19 @@
 
 <html>
 
+<script type="text/javascript">
+  (function(p,u,s,h){
+      p._pcq=p._pcq||[];
+      p._pcq.push(['_currentTime',Date.now()]);
+      s=u.createElement('script');
+      s.type='text/javascript';
+      s.async=true;
+      s.src='https://cdn.pushcrew.com/js/16f23c83d315fc66a94b8d5c855a70fa.js';
+      h=u.getElementsByTagName('script')[0];
+      h.parentNode.insertBefore(s,h);
+  })(window,document);
+</script>
+
 
 <body>
 
