--- a/app/views/rnamings/index.html.erb
+++ b/app/views/rnamings/index.html.erb
@@ -18,6 +18,10 @@
 
 <body>
 
+  <a onclick="_pcq.push(['triggerOptIn']);">
+  GET NOTIFICATIONS
+  </a>
+
 <p id="notice"><%= notice %></p>
 
 <h1>Rnamings</h1>
